--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apple-auth": "^1.0.5",
+    "assert": "^2.0.0",
     "async": "^3.2.4",
     "aws-sdk": "^2.1233.0",
     "axios": "^0.19.2",
+    "babel-loader": "^8.2.5",
     "body-parser": "^1.19.0",
+    "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
     "firebase-admin": "^9.4.2",
     "jsonwebtoken": "^8.5.1",
     "package-name": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^4.0.3",
+    "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
